--- a/files/1_Python/3_boucles.ipynb
+++ b/files/1_Python/3_boucles.ipynb
@@ -5,9 +5,9 @@
    "id": "9ee4445d-5a4b-4bbe-8bb4-d31dbba09556",
    "metadata": {},
    "source": [
-    "# Boucle for\n",
+    "# Boucles\n",
     "\n",
-    "## Range\n",
+    "## Boucle for\n",
     "\n",
     "Une boucle `for` permet de répéter des instructions un certain nombre de fois :"
    ]
@@ -18,10 +18,10 @@
    "id": "d13fd333-ad1e-4cf8-afa2-2059e086e498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.369701Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.368797Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.382149Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.382538Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.008801Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.008215Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.018406Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.017822Z"
     }
    },
    "outputs": [
@@ -100,10 +100,10 @@
    "id": "dce6b7fd-9eb3-41fe-992e-ff767f1910e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.393510Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.390770Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.396283Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.396762Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.029253Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.026008Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.031663Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.032131Z"
     }
    },
    "outputs": [
@@ -143,10 +143,10 @@
    "id": "7aa61e6f-f86c-4da8-93fe-7c809abafac9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.401638Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.401121Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.403523Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.403899Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.037807Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.036654Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.041689Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.041285Z"
     },
     "tags": [
      "cor"
@@ -183,10 +183,10 @@
    "id": "4481ea36-17ca-414c-8532-0ac8b200f0b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.410391Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.408840Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.411931Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.411528Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.047862Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.046003Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.049500Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.049067Z"
     }
    },
    "outputs": [
@@ -223,10 +223,10 @@
    "id": "39fae656-b2eb-4d41-8447-1f4510ad8336",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.416271Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.415822Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.419022Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.418657Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.055315Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.054271Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.056852Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.058151Z"
     },
     "tags": [
      "cor"
@@ -269,10 +269,10 @@
    "id": "27896cfd-b474-4d5a-9bb3-66aa0b495d65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.424066Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.423606Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.426059Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.426439Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.067095Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.065907Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.069878Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.069338Z"
     },
     "tags": [
      "cor"
@@ -326,10 +326,10 @@
    "id": "e836b883-e014-4061-a0af-5964bf3bba01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.431908Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.431392Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.433973Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.434351Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.075954Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.074998Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.077737Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.078202Z"
     },
     "tags": [
      "cor"
@@ -384,10 +384,10 @@
    "id": "5fbd68e7-18e2-4fa7-a24b-e3c312c9a897",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.439765Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.439047Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.441549Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.441940Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.083411Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.082910Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.087179Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.086791Z"
     }
    },
    "outputs": [
@@ -423,10 +423,10 @@
    "id": "5f0955a9-8a4a-4a52-a85d-625df5285bbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.447413Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.446124Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.449495Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.449904Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.091270Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.090663Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.095876Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.095401Z"
     }
    },
    "outputs": [
@@ -465,10 +465,10 @@
    "id": "7e593b30-cd35-49c2-a60d-1070ee246d0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.454867Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.453720Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.455637Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.456027Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.100243Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.099698Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.103251Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.102720Z"
     },
     "tags": [
      "cor"
@@ -501,10 +501,10 @@
    "id": "c3d1d1bf-315c-42ef-ac84-757ead864253",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.459951Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.459480Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.462775Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.463216Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.108160Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.106794Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.108736Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.109181Z"
     },
     "tags": [
      "cor"
@@ -539,10 +539,10 @@
    "id": "7d011306-a4f2-4711-a55c-32855ee1b1a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.467505Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.465523Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.470050Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.469666Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.113665Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.113086Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.115497Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.114996Z"
     },
     "tags": [
      "cor"
@@ -576,10 +576,10 @@
    "id": "3e4e2759-5ff0-457c-9c16-0151e5ed5ea9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.475673Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.474412Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.477439Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.476841Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.119407Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.118885Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.123477Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.122967Z"
     }
    },
    "outputs": [
@@ -605,14 +605,8 @@
    "id": "08fa36be-379c-4039-9e6d-2a4ba62adeda",
    "metadata": {},
    "source": [
-    "# Boucle while"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3dd7c079-957c-4582-a083-260c702f014a",
-   "metadata": {},
-   "source": [
+    "## Boucle while\n",
+    "\n",
     "La boucle while répète des instructions tant qu'une condition est vraie :"
    ]
   },
@@ -622,10 +616,10 @@
    "id": "1b1eb68f-1523-4000-94f4-053b3caade0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:13:32.481732Z",
-     "iopub.status.busy": "2021-11-13T11:13:32.481122Z",
-     "iopub.status.idle": "2021-11-13T11:13:32.483348Z",
-     "shell.execute_reply": "2021-11-13T11:13:32.483699Z"
+     "iopub.execute_input": "2021-11-13T13:18:29.127522Z",
+     "iopub.status.busy": "2021-11-13T13:18:29.126789Z",
+     "iopub.status.idle": "2021-11-13T13:18:29.130794Z",
+     "shell.execute_reply": "2021-11-13T13:18:29.131192Z"
     }
    },
    "outputs": [
