Add points plus proches

--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -2,26 +2,85 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8034aa9-624a-45ca-9ba0-8c97a7130c1e",
+   "id": "f63a5329-194c-40f2-9655-97e6da30d4ce",
    "metadata": {},
    "source": [
     "# Algorithmes opérant sur une structure séquentielle par boucles imbriquées\n",
     "\n",
-    "## Facteur d'une chaîne de caractères\n",
-    "\n",
-    "Les chaînes de caractères (*string* en anglais) servent à stocker du texte, sous forme d'une suite de caractères (symboles). Contrairement aux listes, il n'est pas possible de modifier une chaîne de caractères (on dit que c'est un type immutable). Par exemple, il n'y a pas de `append` sur les chaînesdedededede de caractères."
+    "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $4$ et tous les `j` entre $0$ et $2$ :"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-13T16:28:56.195401Z",
+     "iopub.status.busy": "2021-11-13T16:28:56.193401Z",
+     "iopub.status.idle": "2021-11-13T16:28:56.198148Z",
+     "shell.execute_reply": "2021-11-13T16:28:56.198670Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n",
+      "3 0\n",
+      "3 1\n",
+      "3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
+    "        print(i, j) # affiche i et j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d8c4c47-93aa-4850-b866-169a827d18e9",
+   "metadata": {},
+   "source": [
+    "**Exercice** : Deviner puis vérifier ce qui va être affiché par le code suivant :\n",
+    "```python\n",
+    "for i in range(4):\n",
+    "    for j in range(i, 3):\n",
+    "        print(i, j)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b3e4ba-29d6-45f2-b3b3-1f432f34d49f",
+   "metadata": {},
+   "source": [
+    "## Facteur d'une chaîne de caractères\n",
+    "\n",
+    "Les chaînes de caractères (*string* en anglais) servent à stocker du texte, sous forme d'une suite de caractères (symboles). Contrairement aux listes, il n'est pas possible de modifier une chaîne de caractères (on dit que c'est un type immutable). Par exemple, il n'y a pas de `append` sur les chaînes de caractères."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:14:00.725593Z",
-     "iopub.status.busy": "2021-11-13T16:14:00.724968Z",
-     "iopub.status.idle": "2021-11-13T16:14:00.735884Z",
-     "shell.execute_reply": "2021-11-13T16:14:00.735310Z"
+     "iopub.execute_input": "2021-11-13T16:28:56.204244Z",
+     "iopub.status.busy": "2021-11-13T16:28:56.202948Z",
+     "iopub.status.idle": "2021-11-13T16:28:56.206487Z",
+     "shell.execute_reply": "2021-11-13T16:28:56.206008Z"
     }
    },
    "outputs": [
@@ -42,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:14:00.742654Z",
-     "iopub.status.busy": "2021-11-13T16:14:00.742075Z",
-     "iopub.status.idle": "2021-11-13T16:14:00.801516Z",
-     "shell.execute_reply": "2021-11-13T16:14:00.802009Z"
+     "iopub.execute_input": "2021-11-13T16:28:56.210338Z",
+     "iopub.status.busy": "2021-11-13T16:28:56.209699Z",
+     "iopub.status.idle": "2021-11-13T16:28:56.258446Z",
+     "shell.execute_reply": "2021-11-13T16:28:56.258851Z"
     }
    },
    "outputs": [
@@ -60,7 +119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_159/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_157/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -101,6 +160,43 @@
     "Par exemple, `facteur_i(\"Algorithme\", \"go\", 2)` doit renvoyer `True` mais `facteur_i(\"Algorithme\", \"go\", 0)` doit renvoyer `False`.  \n",
     "2. En déduire une fonction `facteur` telle que `facteur(s, m)` détermine si `m` est un facteur de `s`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7edeca0e-eada-4c44-96cc-0cae996f0bb6",
+   "metadata": {},
+   "source": [
+    "## Recherche des deux valeurs les plus proches\n",
+    "\n",
+    "On veut connaître, dans une liste, les deux valeurs les plus proches.  \n",
+    "Par exemple, les deux valeurs les plus proches dans `[4, 0, 8, 2, 13]` sont `4` et `2`.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ec5af1-a96b-4f6c-ac8e-9171d5d50055",
+   "metadata": {},
+   "source": [
+    "**Exercice** Écrire une fonction `plus_proches` renvoyant un couple des deux valeurs les plus proches dans une liste de nombres.  \n",
+    "On pourra compléter le code suivant (en supposant la liste de taille au moins 2) :\n",
+    "```python\n",
+    "def plus_proches(L):\n",
+    "    m = abs(L[1] - L[0]) # m contient la distance minimum entre 2 valeurs de L\n",
+    "    res = (L[0], L[1]) # les deux valeurs les plus proches\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(len(L)):\n",
+    "            # si la distance de L[i] à L[j] est plus petite que m, mettre à jour m et res\n",
+    "    return res\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16bfb500-64b0-4bb6-8617-983d9cd4cde4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
