--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -16,10 +16,10 @@
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:28:56.195401Z",
-     "iopub.status.busy": "2021-11-13T16:28:56.193401Z",
-     "iopub.status.idle": "2021-11-13T16:28:56.198148Z",
-     "shell.execute_reply": "2021-11-13T16:28:56.198670Z"
+     "iopub.execute_input": "2021-11-13T16:41:56.331278Z",
+     "iopub.status.busy": "2021-11-13T16:41:56.330470Z",
+     "iopub.status.idle": "2021-11-13T16:41:56.343828Z",
+     "shell.execute_reply": "2021-11-13T16:41:56.343267Z"
     }
    },
    "outputs": [
@@ -77,10 +77,10 @@
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:28:56.204244Z",
-     "iopub.status.busy": "2021-11-13T16:28:56.202948Z",
-     "iopub.status.idle": "2021-11-13T16:28:56.206487Z",
-     "shell.execute_reply": "2021-11-13T16:28:56.206008Z"
+     "iopub.execute_input": "2021-11-13T16:41:56.348413Z",
+     "iopub.status.busy": "2021-11-13T16:41:56.347869Z",
+     "iopub.status.idle": "2021-11-13T16:41:56.350061Z",
+     "shell.execute_reply": "2021-11-13T16:41:56.350520Z"
     }
    },
    "outputs": [
@@ -105,10 +105,10 @@
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:28:56.210338Z",
-     "iopub.status.busy": "2021-11-13T16:28:56.209699Z",
-     "iopub.status.idle": "2021-11-13T16:28:56.258446Z",
-     "shell.execute_reply": "2021-11-13T16:28:56.258851Z"
+     "iopub.execute_input": "2021-11-13T16:41:56.354491Z",
+     "iopub.status.busy": "2021-11-13T16:41:56.353964Z",
+     "iopub.status.idle": "2021-11-13T16:41:56.401766Z",
+     "shell.execute_reply": "2021-11-13T16:41:56.402153Z"
     }
    },
    "outputs": [
@@ -119,7 +119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_157/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_158/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -169,7 +169,7 @@
     "## Recherche des deux valeurs les plus proches\n",
     "\n",
     "On veut connaître, dans une liste, les deux valeurs les plus proches.  \n",
-    "Par exemple, les deux valeurs les plus proches dans `[4, 0, 8, 2, 13]` sont `4` et `2`.  "
+    "Par exemple, les deux valeurs les plus proches dans `[4, -1, 8, 2, 13]` sont `4` et `2`.  "
    ]
   },
   {
@@ -191,12 +191,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16bfb500-64b0-4bb6-8617-983d9cd4cde4",
+   "cell_type": "markdown",
+   "id": "732e8ecf-6351-4ec3-991c-dad19095afa5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tri à bulle\n",
+    "\n",
+    "Le tri à bulle permet de trier une liste `L` de taille `n` par ordre croissant de la façon suivante :\n",
+    "```\n",
+    "Pour i variant de 0 à n - 1\n",
+    "    Pour j variant de i + 1 à n - 1\n",
+    "        Si L[i] > L[j]\n",
+    "            Inverser L[i] et L[j]\n",
+    "```\n",
+    "\n",
+    "**Exercice** : Traduire ce pseudo-code en une fonction Python."
+   ]
   }
  ],
  "metadata": {
