--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -5,7 +5,7 @@
    "id": "f63a5329-194c-40f2-9655-97e6da30d4ce",
    "metadata": {},
    "source": [
-    "# Algorithmes opérant sur une structure séquentielle par boucles imbriquées\n",
+    "# Boucles imbriquées \n",
     "\n",
     "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $4$ et tous les `j` entre $0$ et $2$ :"
    ]
@@ -16,10 +16,10 @@
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:41:56.331278Z",
-     "iopub.status.busy": "2021-11-13T16:41:56.330470Z",
-     "iopub.status.idle": "2021-11-13T16:41:56.343828Z",
-     "shell.execute_reply": "2021-11-13T16:41:56.343267Z"
+     "iopub.execute_input": "2021-11-13T16:48:00.180529Z",
+     "iopub.status.busy": "2021-11-13T16:48:00.178711Z",
+     "iopub.status.idle": "2021-11-13T16:48:00.189338Z",
+     "shell.execute_reply": "2021-11-13T16:48:00.189958Z"
     }
    },
    "outputs": [
@@ -77,10 +77,10 @@
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:41:56.348413Z",
-     "iopub.status.busy": "2021-11-13T16:41:56.347869Z",
-     "iopub.status.idle": "2021-11-13T16:41:56.350061Z",
-     "shell.execute_reply": "2021-11-13T16:41:56.350520Z"
+     "iopub.execute_input": "2021-11-13T16:48:00.198569Z",
+     "iopub.status.busy": "2021-11-13T16:48:00.196782Z",
+     "iopub.status.idle": "2021-11-13T16:48:00.200463Z",
+     "shell.execute_reply": "2021-11-13T16:48:00.199961Z"
     }
    },
    "outputs": [
@@ -105,10 +105,10 @@
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:41:56.354491Z",
-     "iopub.status.busy": "2021-11-13T16:41:56.353964Z",
-     "iopub.status.idle": "2021-11-13T16:41:56.401766Z",
-     "shell.execute_reply": "2021-11-13T16:41:56.402153Z"
+     "iopub.execute_input": "2021-11-13T16:48:00.204731Z",
+     "iopub.status.busy": "2021-11-13T16:48:00.204020Z",
+     "iopub.status.idle": "2021-11-13T16:48:00.262031Z",
+     "shell.execute_reply": "2021-11-13T16:48:00.262515Z"
     }
    },
    "outputs": [
@@ -119,7 +119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_158/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_161/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -153,7 +153,11 @@
   {
    "cell_type": "markdown",
    "id": "471dd2ae-5a7b-4b12-94c6-bfd9693a9844",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice**\n",
     "1. Écrire une fonction `facteur_i` telle que `facteur_i(s, m, i)` détermine si `m` apparaît dans `s` à partir de l'indice `i`.  Dit autrement, il faut `s[i]` et `m[0]` soient égaux, que `s[i + 1]` et `m[1]` soient égaux...  \n",
@@ -175,7 +179,11 @@
   {
    "cell_type": "markdown",
    "id": "26ec5af1-a96b-4f6c-ac8e-9171d5d50055",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** Écrire une fonction `plus_proches` renvoyant un couple des deux valeurs les plus proches dans une liste de nombres.  \n",
     "On pourra compléter le code suivant (en supposant la liste de taille au moins 2) :\n",
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732e8ecf-6351-4ec3-991c-dad19095afa5",
+   "id": "6c4c8af1-9381-49f0-9c19-ae4c4222eadd",
    "metadata": {},
    "source": [
     "## Tri à bulle\n",
@@ -203,8 +211,18 @@
     "    Pour j variant de i + 1 à n - 1\n",
     "        Si L[i] > L[j]\n",
     "            Inverser L[i] et L[j]\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56eeef0-84e4-4a07-bb0f-950402007d41",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "**Exercice** : Traduire ce pseudo-code en une fonction Python."
    ]
   }
