--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -6,11 +6,77 @@
    "source": [
     "# Dictionnaire et recherche séquentielle\n",
     "\n",
-    "## Recherche séquentielle dans une liste\n",
-    "\n",
+    "## Recherche séquentielle dans une liste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "1. Ecrire une fonction `appartient` telle que `appartient(e, L)` renvoie `True` si `e` appartient à `L`, `False` sinon.  \n",
     "2. Ecrire une `maximum` renvoyant le maximum d'une liste.  \n",
-    "3. Ecrire une fonction `maximum2` renvoyant le deuxième plus grand élément d'une liste. Par exemple `maximum2([2, 1, 3, 0, 5])` doit renvoyer 3 et `maximum2([2, 1, 5, 0, 5])` doit renvoyer 5."
+    "3. Ecrire une fonction `maximum2` renvoyant le deuxième plus grand élément d'une liste. Par exemple `maximum2([2, 1, 3, 0, 5])` doit renvoyer 3. On supposera tous les éléments différents pour simplifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-13T16:58:50.421788Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.420919Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.436621Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.437089Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def appartient(e, L):\n",
+    "    for i in range(len(L)):\n",
+    "        if e == L[i]:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def maximum(L):\n",
+    "    m = L[0]\n",
+    "    for i in range(1, len(L)):\n",
+    "        if L[i] > m:\n",
+    "            m = L[i]\n",
+    "    return m\n",
+    "\n",
+    "def maximum2(L):\n",
+    "    if L[0] > L[1]:\n",
+    "        m, m2 = L[0], L[1]\n",
+    "    else:\n",
+    "        m, m2 = L[1], L[0]\n",
+    "    # m est le maximum et m2 le 2ème maximum\n",
+    "    for i in range(2, len(L)):\n",
+    "        if L[i] > m2:\n",
+    "            if L[i] > m:\n",
+    "                m, m2 = L[i], m\n",
+    "            else:\n",
+    "                m2 = L[i]\n",
+    "    return m2\n",
+    "\n",
+    "maximum2([2, 1, 3, 0, 5])"
    ]
   },
   {
@@ -31,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.946122Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.945595Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.953475Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.953067Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.444214Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.443577Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.447101Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.447542Z"
     }
    },
    "outputs": [],
@@ -54,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.961761Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.961317Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.964778Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.965114Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.452834Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.452295Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.455079Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.455510Z"
     }
    },
    "outputs": [
@@ -70,7 +136,7 @@
        "6"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.968700Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.967935Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.969451Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.969782Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.459524Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.458903Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.462767Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.463240Z"
     }
    },
    "outputs": [],
@@ -111,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.973426Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.972999Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.975021Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.975350Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.468929Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.467889Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.471539Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.470876Z"
     }
    },
    "outputs": [
@@ -127,7 +193,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.979149Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.978712Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.980843Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.981174Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.477834Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.476733Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.480104Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.479611Z"
     }
    },
    "outputs": [
@@ -161,7 +227,7 @@
        "dict_keys([2, 3, 4])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.984616Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.984181Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.986060Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.986373Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.486521Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.485259Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.488479Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.487999Z"
     }
    },
    "outputs": [
@@ -213,13 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:39:23.989450Z",
-     "iopub.status.busy": "2021-11-13T12:39:23.989038Z",
-     "iopub.status.idle": "2021-11-13T12:39:23.990904Z",
-     "shell.execute_reply": "2021-11-13T12:39:23.990528Z"
+     "iopub.execute_input": "2021-11-13T16:58:50.493938Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.492702Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.494663Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.495116Z"
     }
    },
    "outputs": [],
@@ -231,20 +297,135 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
-    "1. Définir un dictionnaire associant 42 à 5 et 23 à 13. Vérifier.  \n",
+    "1. Définir un dictionnaire qui à 42 associe 5 et à 23 associe 13. Vérifier.  \n",
     "2. Définir un dictionnaire `d` associant aux chaînes de caractères \"hello\" et \"python\" leurs nombres de caractères (par exemple, il faut que `d[\"hello\"]`soit égal à 5 car `\"hello\"` contient 5 caractères)."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-13T16:58:50.502045Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.500579Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.504761Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.503445Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Comptage avec un dictionnaire\n",
+    "# 1\n",
+    "d = {42 : 5, 23 : 13}\n",
+    "print(d[23]) # donne 13\n",
     "\n",
+    "# 2\n",
+    "d = {\"hello\" : 5, \"python\" : 6}\n",
+    "d[\"hello\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Comptage avec un dictionnaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "1. Ecrire une fonction `compter` telle que `compter(L)` renvoie un dictionnaire `d` dont les clés sont les éléments de `L` et les valeurs sont les nombres d'apparitions de chaque éléments. Ainsi, `d[e]` est le nombre de fois que `L[e]` apparaît dans `L`. Par exemple, `compter([1, 7, 1, 1, 5, 7])` doit renvoyer `d` tel que `d[1] = 3` (1 apparaît 3 fois), `d[5] = 1` (5 apparaît 1 fois), `d[7] = 2` (7 apparaît 2 fois).  \n",
     "2. En déduire une fonction `majoritaire` telle que `majoritaire(L)` renvoie l'élément qui apparaît le plus souvent dans `L`. Par exemple, `majoritaire([1, 7, 1, 1, 5, 7])` doit renvoyer 1 (il apparaît plus de fois que n'importe quel autre élément)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-13T16:58:50.510610Z",
+     "iopub.status.busy": "2021-11-13T16:58:50.510077Z",
+     "iopub.status.idle": "2021-11-13T16:58:50.516081Z",
+     "shell.execute_reply": "2021-11-13T16:58:50.516506Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 7: 2, 5: 1}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "def compter(L):\n",
+    "    d = {} # dictionnaire vide\n",
+    "    for e in L:\n",
+    "        if e not in d:\n",
+    "            d[e] = 0\n",
+    "        d[e] += 1 # augmente de 1 le nombre d'appartions de e\n",
+    "    return d\n",
+    "\n",
+    "print(compter([1, 7, 1, 1, 5, 7]))\n",
+    "\n",
+    "# 2\n",
+    "def majoritaire(L):\n",
+    "    d = compter(L)\n",
+    "    m = None # l'élément ayant apparu le plus de fois (None est juste là pour l'initialisation)\n",
+    "    for k in d:\n",
+    "        if m is None or d[k] > d[m]:\n",
+    "            m = k # mise à jour de m\n",
+    "    return m\n",
+    "\n",
+    "majoritaire([1, 7, 1, 1, 5, 7])    "
    ]
   },
   {
