--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -5,7 +5,7 @@
    "id": "f63a5329-194c-40f2-9655-97e6da30d4ce",
    "metadata": {},
    "source": [
-    "# Boucles imbriquées \n",
+    "# Boucles imbriquées [![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F2_boucles_imbriquees.ipynb%26branch%3Dmaster)\n",
     "\n",
     "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $4$ et tous les `j` entre $0$ et $2$ :"
    ]
@@ -16,10 +16,10 @@
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:48:00.180529Z",
-     "iopub.status.busy": "2021-11-13T16:48:00.178711Z",
-     "iopub.status.idle": "2021-11-13T16:48:00.189338Z",
-     "shell.execute_reply": "2021-11-13T16:48:00.189958Z"
+     "iopub.execute_input": "2021-11-16T17:42:44.344371Z",
+     "iopub.status.busy": "2021-11-16T17:42:44.343582Z",
+     "iopub.status.idle": "2021-11-16T17:42:44.356374Z",
+     "shell.execute_reply": "2021-11-16T17:42:44.356846Z"
     }
    },
    "outputs": [
@@ -77,10 +77,10 @@
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:48:00.198569Z",
-     "iopub.status.busy": "2021-11-13T16:48:00.196782Z",
-     "iopub.status.idle": "2021-11-13T16:48:00.200463Z",
-     "shell.execute_reply": "2021-11-13T16:48:00.199961Z"
+     "iopub.execute_input": "2021-11-16T17:42:44.362918Z",
+     "iopub.status.busy": "2021-11-16T17:42:44.361623Z",
+     "iopub.status.idle": "2021-11-16T17:42:44.365521Z",
+     "shell.execute_reply": "2021-11-16T17:42:44.364996Z"
     }
    },
    "outputs": [
@@ -105,10 +105,10 @@
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:48:00.204731Z",
-     "iopub.status.busy": "2021-11-13T16:48:00.204020Z",
-     "iopub.status.idle": "2021-11-13T16:48:00.262031Z",
-     "shell.execute_reply": "2021-11-13T16:48:00.262515Z"
+     "iopub.execute_input": "2021-11-16T17:42:44.369559Z",
+     "iopub.status.busy": "2021-11-16T17:42:44.368934Z",
+     "iopub.status.idle": "2021-11-16T17:42:44.420724Z",
+     "shell.execute_reply": "2021-11-16T17:42:44.421239Z"
     }
    },
    "outputs": [
@@ -119,7 +119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_161/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_157/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
