Add launch binder

--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dictionnaire et recherche séquentielle\n",
+    "# Dictionnaire et recherche séquentielle [![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.421788Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.420919Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.436621Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.437089Z"
+     "iopub.execute_input": "2021-11-16T17:48:56.956092Z",
+     "iopub.status.busy": "2021-11-16T17:48:56.952235Z",
+     "iopub.status.idle": "2021-11-16T17:48:56.969473Z",
+     "shell.execute_reply": "2021-11-16T17:48:56.969981Z"
     },
     "tags": [
      "cor"
@@ -100,10 +100,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.444214Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.443577Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.447101Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.447542Z"
+     "iopub.execute_input": "2021-11-16T17:48:56.974475Z",
+     "iopub.status.busy": "2021-11-16T17:48:56.972726Z",
+     "iopub.status.idle": "2021-11-16T17:48:56.976294Z",
+     "shell.execute_reply": "2021-11-16T17:48:56.976759Z"
     }
    },
    "outputs": [],
@@ -123,10 +123,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.452834Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.452295Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.455079Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.455510Z"
+     "iopub.execute_input": "2021-11-16T17:48:56.982318Z",
+     "iopub.status.busy": "2021-11-16T17:48:56.979045Z",
+     "iopub.status.idle": "2021-11-16T17:48:56.992428Z",
+     "shell.execute_reply": "2021-11-16T17:48:56.991726Z"
     }
    },
    "outputs": [
@@ -157,10 +157,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.459524Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.458903Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.462767Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.463240Z"
+     "iopub.execute_input": "2021-11-16T17:48:56.996502Z",
+     "iopub.status.busy": "2021-11-16T17:48:56.995046Z",
+     "iopub.status.idle": "2021-11-16T17:48:56.998736Z",
+     "shell.execute_reply": "2021-11-16T17:48:56.998258Z"
     }
    },
    "outputs": [],
@@ -180,10 +180,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.468929Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.467889Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.471539Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.470876Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.003735Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.001261Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.008174Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.007540Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.477834Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.476733Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.480104Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.479611Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.013985Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.012824Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.016430Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.015909Z"
     }
    },
    "outputs": [
@@ -248,10 +248,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.486521Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.485259Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.488479Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.487999Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.021376Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.018787Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.024050Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.024528Z"
     }
    },
    "outputs": [
@@ -282,10 +282,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.493938Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.492702Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.494663Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.495116Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.028430Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.026853Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.030169Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.030615Z"
     }
    },
    "outputs": [],
@@ -312,10 +312,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.502045Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.500579Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.504761Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.503445Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.036998Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.036275Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.039388Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.039869Z"
     },
     "tags": [
      "cor"
@@ -376,10 +376,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T16:58:50.510610Z",
-     "iopub.status.busy": "2021-11-13T16:58:50.510077Z",
-     "iopub.status.idle": "2021-11-13T16:58:50.516081Z",
-     "shell.execute_reply": "2021-11-13T16:58:50.516506Z"
+     "iopub.execute_input": "2021-11-16T17:48:57.048587Z",
+     "iopub.status.busy": "2021-11-16T17:48:57.045499Z",
+     "iopub.status.idle": "2021-11-16T17:48:57.052225Z",
+     "shell.execute_reply": "2021-11-16T17:48:57.051689Z"
     },
     "tags": [
      "cor"
